fix overlapping text + modal for low budget

--- a/client/src/views/Summary/style.scss
+++ b/client/src/views/Summary/style.scss
@@ -21,6 +21,15 @@
         background-color: #FFDA4E
     }
 
+    .challenge-title {
+        padding-left: 16px;
+    }
+    
+    .challenge-details {
+        padding-left: 40px;
+        padding-bottom: 7px;
+    }
+
     .mine .bar {
         background-color: #FFA725;
     }
